# drx-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  keepalive.yml
alembic/: env.py
alembic/versions/: 20250128_0001_001_initial_extensions.py  20260519_1235_5807b21acd69_crm_initial.py  20260525_0001_add_follow_up_fields.py  20260708_0001_add_lawyers_table.py
app/: agent.py  audit.py  auth.py  config.py  langfuse_client.py  logging_config.py  main.py  memory.py  metrics.py  middleware.py  models.py  observability.py  profiling.py  prompt_manager.py  rate_limiter.py  resilience.py  security.py  storage.py  tracing.py
app/db/: __init__.py  models.py  session.py
app/models/: __init__.py  agentbench.py  appointment.py  conversation.py  lead.py  message.py
app/routes/: __init__.py  agentbench.py  appointments.py  conversations.py  dashboard.py  leads.py  system.py  webhooks.py
app/routes/crm/: __init__.py  appointments.py  conversations.py  dashboard.py  follow_up.py  leads.py  oauth.py
app/services/: __init__.py  calendar_service.py  crm_sync.py  ctwa_detection.py  google_oauth_service.py  qualification_service.py  whatsapp_service.py
app/tasks/: __init__.py  reminders.py
app/tools/: __init__.py  catalogo.py  obter_data_hora.py  sessao.py
app/tools/drx/: __init__.py  calendar.py  image_store.py  leads.py  qualification.py  vision.py  whatsapp.py
chat/src/app/: page.tsx
docs/: agentbench.md  agente.md  agentos.md  async.md  clients.md  culture.md  dependencies.md  deploy.md  desenvolvimento.md  few-shot.md  guardrails.md  hooks.md  input-output.md  integracao.md  knowledge.md  memory.md  multimodal.md  observability.md  reasoning.md  skills.md  state.md  storage.md  streaming.md  teams.md  tools.md  workflows.md
prompt/: prompt-v1.md
scripts/: drop_all_tables.py  hash_password.py  mock_dashboard_server.py  seed_demo_data.py  seed_lawyer.py
tests/: conftest.py  test_api.py  test_auth.py  test_tools.py
