[project]
name = "asani-ai-agent-template"
version = "1.0.0"
description = "Asani AI Agent Template - AgentOS with AgentBench Standard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.0",
    "anthropic>=0.76.0",
    "asyncpg>=0.31.0",
    "bcrypt>=4.2.0",
    "fastapi==0.128.0",
    "httpx>=0.28.1",
    "json-repair>=0.30.0",
    "langfuse>=3.12.1",
    "litellm>=1.55.0",
    "openai>=2.16.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-sdk>=1.29.0",
    "orjson>=3.11.5",
    "prometheus-client>=0.21.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "tenacity>=9.0.0",
    "uvicorn[standard]==0.40.0",
]

[dependency-groups]
dev = [
    "blue>=0.9.1",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.14",
]
